<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gluon_hardware_interface</name>
  <version>0.0.0</version>
  <description>ros2_control hardware interface for the INNFOS Gluon arm, built on innfos-cpp-sdk</description>
  <maintainer email="rowbotworks@gmail.com">rowbot</maintainer>
  <license>Apache-2.0</license>

  
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
